--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BnRmc1GQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Dk5lETzj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Dp1DV69r.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BvK3bb1b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/erN7JwqA.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DhavXi9s.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DIeogL5L.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DDewMqrm.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CYgJF_JY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Bi8m8FUW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CN0xCWUg.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.BT-d0ux7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/NZTpNUN0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/C8zPlSMq.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CTWb8ZlO.js">
@@ -24,7 +24,7 @@
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1n6vcal = {
+					__sveltekit_mc1cr5 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						assets: "/planit-production"
 					};
@@ -32,8 +32,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.BnRmc1GQ.js"),
-						import("./_app/immutable/entry/app.CN0xCWUg.js")
+						import("./_app/immutable/entry/start.Dp1DV69r.js"),
+						import("./_app/immutable/entry/app.BT-d0ux7.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
