--- a/index.html
+++ b/index.html
@@ -2,38 +2,38 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/planit-production/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Dp1DV69r.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BvK3bb1b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/erN7JwqA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DhavXi9s.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DIeogL5L.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DDewMqrm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CYgJF_JY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Bi8m8FUW.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BT-d0ux7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/NZTpNUN0.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C8zPlSMq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CTWb8ZlO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C6CJrySy.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CUh0Sr2c.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/entry/start.CzWG5mYT.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/BEPQAc8_.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/Bdc5JO82.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/BukKJz2t.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/DIeogL5L.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/CF-MGArY.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/CYgJF_JY.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/BDWStS1S.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/entry/app.rVI8xy44.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/NZTpNUN0.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/BU2Axe3Q.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/BEnazXDl.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/Deh_T7Pf.js">
+		<link rel="modulepreload" href="/planit-production/_app/immutable/chunks/ybkp-27e.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_mc1cr5 = {
-						base: new URL(".", location).pathname.slice(0, -1),
+					__sveltekit_1vvog7w = {
+						base: "/planit-production",
 						assets: "/planit-production"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Dp1DV69r.js"),
-						import("./_app/immutable/entry/app.BT-d0ux7.js")
+						import("/planit-production/_app/immutable/entry/start.CzWG5mYT.js"),
+						import("/planit-production/_app/immutable/entry/app.rVI8xy44.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
